--- a/azure-pipelines-ci.yml
+++ b/azure-pipelines-ci.yml
@@ -63,6 +63,21 @@ stages:
         . venv/bin/activate
         ./script/gen_requirements_all.py validate
       displayName: 'requirements_all validate'
+  - job: 'CheckFormat'
+    pool:
+      vmImage: 'ubuntu-latest'
+    container: $[ variables['PythonMain'] ]
+    steps:
+    - script: |
+        python -m venv venv
+
+        . venv/bin/activate
+        pip install black
+      displayName: 'Setup Env'
+    - script: |
+        . venv/bin/activate
+        ./script/check_format
+      displayName: 'Check black formatting'
 
 - stage: 'Tests'
   dependsOn:
