--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,6 @@ classifier =
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Topic :: Home Automation
@@ -22,6 +21,9 @@ norecursedirs = .git testing_config
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
+# To work with Black
+max-line-length = 88
+ignore = E501, W503, E203
 
 [isort]
 # https://github.com/timothycrosley/isort
