Copy from hass.io

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,14 @@
 		"python.pythonPath": "/usr/local/bin/python",
 		"python.linting.pylintEnabled": true,
 		"python.linting.enabled": true,
+		"python.formatting.provider": "black",
+		"python.formatting.blackArgs": [
+			"--target--version",
+			"py37"
+		],
+		"editor.formatOnPaste": false,
 		"editor.formatOnSave": true,
+		"editor.formatOnType": true,
 		"files.trimTrailingWhitespace": true,
 		"editor.rulers": [80],
 		"terminal.integrated.shell.linux": "/bin/bash",
