--- a/azure-pipelines-ci.yml
+++ b/azure-pipelines-ci.yml
@@ -38,7 +38,7 @@ stages:
         python -m venv venv
 
         . venv/bin/activate
-        pip install flake8
+        pip install -r requirements_test.txt -c homeassistant/package_constraints.txt
       displayName: 'Setup Env'
     - script: |
         . venv/bin/activate
@@ -72,7 +72,7 @@ stages:
         python -m venv venv
 
         . venv/bin/activate
-        pip install black
+        pip install -r requirements_test.txt -c homeassistant/package_constraints.txt
       displayName: 'Setup Env'
     - script: |
         . venv/bin/activate
